gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__variable_detail_chain_minimal.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: minimal_snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                  0─1─2                                                             "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
