gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__viewport_extended_complex_dag_node_partitioning.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                         █████                                                  "
"                     ╭───█N5██───╮                                              "
"             █████ ╭─╯   █████   │ █████                                        "
"           ╭─█N1██─│─╮           ├─█N7██─╮                                      "
"     █████ │ █████ │ ├─╮ █████ ╭─╯ █████ │ █████ █████                          "
"     █N0██─┤       │ │ ├─█N4██─┤         ├─█N8██─█N9██                          "
"     █████ │ █████ ├─│─╯ █████ ╰─╮ █████ │ █████ █████                          "
"           ╰─█N2██─╯ │           ├─█N6██─╯                                      "
"             █████   │   █████   │ █████                                        "
"                     ╰───█N3██───╯                                              "
"                         █████                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
