gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__viewport_single_node.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"     █████                                                  "
"     █N0██                                                  "
"     █████                                                  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
