gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__wide_chain_end.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: end_snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"█████ █████ █████ █████ █████ █████ █████ █████                                 "
"█N12█─█N13█─█N14█─█N15█─█N16█─█N17█─█N18█─█N19█                                 "
"█████ █████ █████ █████ █████ █████ █████ █████                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
