gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__wide_chain_start.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: start_snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ "
"  █N0██─█N1██─█N2██─█N3██─█N4██─█N5██─█N6██─█N7██─█N8██─█N9██─█N10█─█N11█─█N12█─"
"  █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
